# MWaysSearch

./: .gitignore  CMakeLists.txt  DataFile.cpp  DataFile.h  MWayTree.cpp  MWayTree.h  README.md  employees.txt  main.cpp  mvias.txt  mvias3.txt  mvias5.txt  test_mvias.txt
